--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "name": "pixel-home-surface",
   "private": true,
   "type": "module",
   "scripts": {
@@ -10,8 +11,15 @@
   },
   "devDependencies": {
     "@nuxt/devtools": "^1.0.3",
-    "nuxt": "^3.8.2",
+    "nuxt": "^3.13.2",
     "vue": "^3.3.8",
     "vue-router": "^4.2.5"
+  },
+  "dependencies": {
+    "axios": "^1.7.7",
+    "eslint": "^9.13.0",
+    "eslint-plugin-nuxt": "^4.0.0",
+    "jimp": "^1.6.0",
+    "prettier": "^3.3.3"
   }
 }
